--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,35 @@
+aiohttp
+aiosignal
+attrs
+autotools-language-server
+black
+cattrs
+click
+colorama
+frozenlist
+greenlet
+idna
+Jinja2
+jsonschema
+jsonschema-specifications
+lsprotocol
+MarkupSafe
+msgpack
+multidict
+mypy-extensions
+neovim
+nodeenv
+packaging
+pathspec
+platformdirs
+pygls
+pynvim
+pyright
+referencing
+rpds-py
+ruff
 ruff-lsp
+tree-sitter
+tree-sitter-languages
+typing_extensions
+yarl
